# mlita-learn

lw1/: CMakeLists.txt  main.cpp  testing.cpp
lw1/BracketHandler/: BracketHandler.cpp  BracketHandler.h
lw1/testdata/: output.txt  output_expected.txt
lw2/: CMakeLists.txt  main.cpp  testing.cpp
lw2/TriangleSum/: TriangleSum.cpp  TriangleSum.h
lw2/testdata/: input.txt  input1.txt  output.txt
lw3/: CMakeLists.txt  main.cpp
lw6/: input.txt  main.cpp  readme.md
other/max-number/: input.txt  main.cpp  readme.md
other/simple-numbers/: .gitignore  main.cpp  output.txt  readme.md
other/switch-sign/: input.txt  main.cpp
tasks/DOtrezkov/: .gitignore  CMakeLists.txt  Helpers.h  main.cpp
tasks/FenvikTree/: CMakeLists.txt  main.cpp
tasks/FenvikTree/FenvikTree/: FenvikTree.cpp  FenvikTree.h
tasks/KingPosition/: main.cpp
tasks/KingPosition/testdata/: input.txt  input4.txt  input5.txt
